Fix blog content not showing

--- a/css/post.css
+++ b/css/post.css
@@ -8,6 +8,14 @@ html, body {
   box-sizing: border-box;
 }
 
+.post-main {
+  max-width: 700px;
+  margin: 3rem auto;
+  padding: 0 1rem;
+  font-family: Inter, sans-serif;
+  line-height: 1.6;
+}
+
 .posts>h1 {
   font-size: 2.5rem;
   font-weight: 550;
